--- a/global.css
+++ b/global.css
@@ -227,6 +227,7 @@ a {
 .logofoot {
   width: 131.5px;
 }
+
 .grid_1_1_1_1 {
   display: flex;
   flex-direction: column;
@@ -245,7 +246,7 @@ a {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: #eff0eb;
+    background-color: #d9d9d9;
     text-align: left;
   }
   .logofoot {
