--- a/global.css
+++ b/global.css
@@ -104,6 +104,7 @@ a {
   transition: color 0.3s;
   text-align: end;
   font-size: 1.2rem;
+  font-family: "Merriweather", serif;
 }
 
 .menu a:hover {
